--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install system dependencies for building wheels
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential python3-dev yaml-dev libyaml-dev
+          sudo apt-get install -y build-essential python3-dev libyaml-dev
 
       - name: Install docker-compose
         run: |
@@ -61,7 +61,7 @@ jobs:
       - name: Install system dependencies for building wheels
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential python3-dev yaml-dev libyaml-dev
+          sudo apt-get install -y build-essential python3-dev libyaml-dev
 
       - name: Install docker-compose
         run: |
