update to docker files and workflow for pyYaml

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,21 @@
 FROM python:3.9
 
-MAINTAINER newtonmccollum@gmail.com
+LABEL maintainer="newtonmccollum@gmail.com"
 
 WORKDIR /src
+
+# Install system dependencies needed to build Python packages with C extensions
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    python3-dev \
+    libyaml-dev \
+    gcc \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
+
 COPY ./src/requirements.txt /src
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install -r requirements.txt
 
 COPY ./src/ /src
 
