--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,14 +1,25 @@
 FROM python:3.9
 
-MAINTAINER newtonmccollum@gmail.com
+LABEL maintainer="newtonmccollum@gmail.com"
 
 WORKDIR /src
-COPY ./src/ /src
 
-RUN pip install -U requests pytest 
+# Install system dependencies needed to build Python packages with C extensions
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    python3-dev \
+    libyaml-dev \
+    gcc \
+    g++ \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install -U requests pytest
     
 COPY wait-for-it.sh /
 RUN chmod +x /wait-for-it.sh
+
+COPY ./src/ /src
 
 # TODO: Update API Path to be an ENV/ARG in the Dockerfile
 CMD ["/wait-for-it.sh" , "natl_backend_api:8081" , "--strict" , "--timeout=300" , "--" ,"pytest", "/src/"]
