--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Install system dependencies for building wheels
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential python3-dev libyaml-dev
+          sudo apt-get install -y build-essential python3-dev libyaml-dev gcc g++
 
       - name: Install docker-compose
         run: |
-          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip setuptools wheel
           pip3 install docker-compose
 
       - name: Show Docker info
@@ -61,11 +61,11 @@ jobs:
       - name: Install system dependencies for building wheels
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential python3-dev libyaml-dev
+          sudo apt-get install -y build-essential python3-dev libyaml-dev gcc g++
 
       - name: Install docker-compose
         run: |
-          python3 -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip setuptools wheel
           pip3 install docker-compose
 
       - name: Build required containers
