--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,18 +14,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install system dependencies for building wheels
+      - name: Show Docker and Docker Compose info
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential python3-dev libyaml-dev gcc g++
-
-      - name: Install docker-compose
-        run: |
-          python3 -m pip install --upgrade pip setuptools wheel
-          pip3 install docker-compose
-
-      - name: Show Docker info
-        run: docker info
+          docker --version
+          docker-compose --version
 
       - name: Build containers with docker-compose
         run: docker-compose build
@@ -58,15 +50,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install system dependencies for building wheels
+      - name: Show Docker and Docker Compose info
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential python3-dev libyaml-dev gcc g++
-
-      - name: Install docker-compose
-        run: |
-          python3 -m pip install --upgrade pip setuptools wheel
-          pip3 install docker-compose
+          docker --version
+          docker-compose --version
 
       - name: Build required containers
         run: docker-compose build --parallel
