continued troubleshooting of pyYAML

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -11,10 +11,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libyaml-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Upgrade pip, setuptools, and wheel BEFORE installing requirements
-RUN pip install --upgrade pip setuptools wheel
+# Upgrade pip to latest first, then setuptools and wheel
+RUN python -m pip install --no-cache-dir --upgrade 'pip>=24.0' setuptools wheel
 
-RUN pip install --no-cache-dir -U requests pytest
+# Install test requirements with pip cache disabled and prefer binary wheels
+RUN pip install --no-cache-dir --prefer-binary --disable-pip-version-check -U requests pytest
 
 COPY wait-for-it.sh /
 RUN chmod +x /wait-for-it.sh
