--- a/.github/workflows/react-sast.yml
+++ b/.github/workflows/react-sast.yml
@@ -59,7 +59,7 @@ jobs:
             src/ || true
 
       - name: Upload ESLint SARIF results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: eslint-results.sarif
@@ -174,7 +174,7 @@ jobs:
           node convert_npm_audit.js
 
       - name: Upload npm audit SARIF results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: natl-frontend/npm-audit-sarif.json
@@ -206,7 +206,7 @@ jobs:
             natl-frontend/src/ || true
 
       - name: Upload Semgrep SARIF results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
           sarif_file: semgrep-results.sarif
@@ -323,12 +323,13 @@ jobs:
           EOF
 
           node convert_retire.js
+          mv retire-sarif.json ../retire-sarif.json
 
       - name: Upload RetireJS SARIF results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
+        uses: github/codeql-action/upload-sarif@v4
         if: always()
         with:
-          sarif_file: natl-frontend/retire-sarif.json
+          sarif_file: retire-sarif.json
           category: retirejs
 
   codeql:
@@ -344,13 +345,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3
+        uses: github/codeql-action/init@v4
         with:
           languages: javascript
           queries: security-extended,security-and-quality
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+        uses: github/codeql-action/analyze@v4
         with:
           category: codeql-javascript
 
