--- a/.github/workflows/docker-security-scan.yml
+++ b/.github/workflows/docker-security-scan.yml
@@ -1,4 +1,4 @@
-name: Docker Image Security Scans
+name: Docker Image Security Scans (Security and Image Vuln)
 
 on:
   push:
@@ -13,10 +13,6 @@ on:
       - '**/Dockerfile'
       - 'docker-compose.yml'
       - '.github/workflows/docker-security-scan.yml'
-  schedule:
-    # Run weekly on Sundays at 4 AM UTC
-    - cron: '0 4 * * 0'
-  workflow_dispatch:
 
 jobs:
   build-images:
@@ -173,67 +169,10 @@ jobs:
           sarif_file: hadolint-db-results.sarif
           category: hadolint-database
 
-  docker-scout:
-    name: Docker Scout Analysis
-    runs-on: ubuntu-latest
-    needs: build-images
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download backend image
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-image
-          path: /tmp
-
-      - name: Download frontend image
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-image
-          path: /tmp
-
-      - name: Download database image
-        uses: actions/download-artifact@v4
-        with:
-          name: db-image
-          path: /tmp
-
-      - name: Load Docker images
-        run: |
-          docker load --input /tmp/backend-image.tar
-          docker load --input /tmp/frontend-image.tar
-          docker load --input /tmp/db-image.tar
-
-      - name: Analyze backend image with Docker Scout
-        uses: docker/scout-action@v1
-        with:
-          command: cves
-          image: natl-backend:${{ github.sha }}
-          only-severities: critical,high
-          exit-code: false
-
-      - name: Analyze frontend image with Docker Scout
-        uses: docker/scout-action@v1
-        with:
-          command: cves
-          image: natl-frontend:${{ github.sha }}
-          only-severities: critical,high
-          exit-code: false
-
-      - name: Analyze database image with Docker Scout
-        uses: docker/scout-action@v1
-        with:
-          command: cves
-          image: natl-db:${{ github.sha }}
-          only-severities: critical,high
-          exit-code: false
-
   summary:
     name: Security Scan Summary
     runs-on: ubuntu-latest
-    needs: [grype-backend, dockerfile-lint, docker-scout]
+    needs: [grype-backend, dockerfile-lint]
     if: always()
     
     steps:
@@ -249,7 +188,6 @@ jobs:
           echo "## Security Tools Used:" >> $GITHUB_STEP_SUMMARY
           echo "- **Grype** - Anchore vulnerability scanner" >> $GITHUB_STEP_SUMMARY
           echo "- **Hadolint** - Dockerfile best practices linter" >> $GITHUB_STEP_SUMMARY
-          echo "- **Docker Scout** - Docker's official security analysis" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "## Results Location" >> $GITHUB_STEP_SUMMARY
           echo "All vulnerability findings have been uploaded to the **Security** tab." >> $GITHUB_STEP_SUMMARY
