--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -11,70 +11,51 @@ jobs:
     name: Backend Test Coverage (Python)
     runs-on: ubuntu-latest
     
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: natl
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and start services with Docker Compose
+        run: |
+          docker compose build db natl_backend_api
+          docker compose up -d db natl_backend_api
+
+      - name: Wait for services to be ready
+        run: |
+          echo "Waiting for database to be ready..."
+          for i in {1..30}; do
+            if docker compose exec -T db mysqladmin ping -h localhost --silent; then
+              echo "Database is ready"
+              break
+            fi
+            echo "Waiting..."
+            sleep 2
+          done
+          
+          echo "Waiting for backend API to be ready..."
+          sleep 5
+
+      - name: Run tests with coverage in Docker
+        run: |
+          docker compose run --rm -e PYTEST_ADDOPTS="--cov=/app/backend/src --cov-report=term --cov-report=html:/app/tests/src/coverage-html --cov-report=xml:/app/tests/src/coverage.xml --cov-report=json:/app/tests/src/coverage.json -v" test || true
+      
+      - name: Copy coverage files from container
+        run: |
+          # Create a temporary container to copy files from
+          CONTAINER_ID=$(docker compose create test)
+          docker cp ${CONTAINER_ID}:/app/tests/src/coverage-html ./tests/src/coverage-html || true
+          docker cp ${CONTAINER_ID}:/app/tests/src/coverage.xml ./tests/src/coverage.xml || true
+          docker cp ${CONTAINER_ID}:/app/tests/src/coverage.json ./tests/src/coverage.json || true
+          docker cp ${CONTAINER_ID}:/app/tests/src/.coverage ./tests/src/.coverage || true
+          docker rm ${CONTAINER_ID} || true
+
+      - name: Set up Python for coverage processing
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-          cache: 'pip'
-          cache-dependency-path: backend/src/requirements.txt
-
-      - name: Install dependencies
-        working-directory: backend/src
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest-cov coverage
-
-      - name: Wait for MySQL to be ready
-        run: |
-          for i in {1..30}; do
-            if mysqladmin ping -h"127.0.0.1" -P3306 -uroot -proot --silent; then
-              echo "MySQL is ready"
-              break
-            fi
-            echo "Waiting for MySQL..."
-            sleep 2
-          done
-
-      - name: Set up test database
-        run: |
-          mysql -h 127.0.0.1 -P 3306 -u root -proot -e "DROP DATABASE IF EXISTS natl;"
-          mysql -h 127.0.0.1 -P 3306 -u root -proot < mysql/1_create_database.sql
-          mysql -h 127.0.0.1 -P 3306 -u root -proot < mysql/2_create_test_data.sql
-
-      - name: Run tests with coverage
-        working-directory: tests/src
-        env:
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_USER: root
-          DB_PASSWORD: root
-          DB_NAME: natl
-        run: |
-          pytest --cov=../../backend/src \
-                 --cov-report=term \
-                 --cov-report=html:coverage-html \
-                 --cov-report=xml:coverage.xml \
-                 --cov-report=json:coverage.json \
-                 -v || true
 
       - name: Generate coverage badge
         if: always()
@@ -150,6 +131,10 @@ jobs:
               repo: context.repo.repo,
               body: comment
             });
+
+      - name: Cleanup Docker containers
+        if: always()
+        run: docker compose down -v
 
   frontend-coverage:
     name: Frontend Test Coverage (React)
