--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -237,14 +237,22 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const coverage = process.env.FRONTEND_COVERAGE || '0';
-            const color = process.env.FRONTEND_BADGE_COLOR || 'red';
-            const emoji = color === 'brightgreen' ? '✅' : color === 'yellow' ? '⚠️' : '❌';
+            const coverage = process.env.FRONTEND_COVERAGE || 'N/A';
+            const color = process.env.FRONTEND_BADGE_COLOR || 'lightgrey';
+            const emoji = color === 'brightgreen' ? '✅' : color === 'yellow' ? '⚠️' : color === 'lightgrey' ? 'ℹ️' : '📊';
+            
+            let status = 'INFORMATIONAL';
+            if (coverage !== 'N/A') {
+              const coverageNum = parseFloat(coverage);
+              status = coverageNum >= 80 ? '✅ EXCELLENT' : '📊 TRACKED';
+            }
             
             const comment = `## ${emoji} Frontend Test Coverage: ${coverage}%
             
-            **Minimum Required:** 80%
-            **Status:** ${parseFloat(coverage) >= 80 ? '✅ PASSED' : '❌ FAILED'}
+            **Recommended Threshold:** 80%
+            **Status:** ${status}
+            
+            _Note: Frontend coverage is informational only and does not block the build._
             
             [View detailed coverage report](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})`;
             
@@ -273,15 +281,15 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           
           if [ "${{ needs.backend-coverage.result }}" == "success" ]; then
-            echo "- ✅ **Backend (Python):** PASSED" >> $GITHUB_STEP_SUMMARY
+            echo "- ✅ **Backend (Python):** PASSED (Required)" >> $GITHUB_STEP_SUMMARY
           else
-            echo "- ❌ **Backend (Python):** FAILED" >> $GITHUB_STEP_SUMMARY
+            echo "- ❌ **Backend (Python):** FAILED (Required)" >> $GITHUB_STEP_SUMMARY
           fi
           
           if [ "${{ needs.frontend-coverage.result }}" == "success" ]; then
-            echo "- ✅ **Frontend (React):** PASSED" >> $GITHUB_STEP_SUMMARY
+            echo "- ✅ **Frontend (React):** PASSED (Informational)" >> $GITHUB_STEP_SUMMARY
           else
-            echo "- ❌ **Frontend (React):** FAILED" >> $GITHUB_STEP_SUMMARY
+            echo "- ℹ️ **Frontend (React):** See details (Informational - does not block build)" >> $GITHUB_STEP_SUMMARY
           fi
           
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -299,9 +307,13 @@ jobs:
 
       - name: Check overall status
         run: |
-          if [ "${{ needs.backend-coverage.result }}" != "success" ] || [ "${{ needs.frontend-coverage.result }}" != "success" ]; then
-            echo "❌ One or more coverage checks failed"
+          # Only backend coverage is required
+          if [ "${{ needs.backend-coverage.result }}" != "success" ]; then
+            echo "❌ Backend coverage check failed (required)"
             exit 1
           else
-            echo "✅ All coverage checks passed"
+            echo "✅ Backend coverage check passed"
+            if [ "${{ needs.frontend-coverage.result }}" != "success" ]; then
+              echo "ℹ️ Frontend coverage is informational only and does not affect build status"
+            fi
           fi
